@@ -3,25 +3,23 @@ Hash: SHA256
 
 AUX baloo-4.13.0-nokcm.patch 449 SHA256 430dcd7ae1f72dcf77fd33a259153b84aedd3cb207ec06717ad1a4ff3efb661e SHA512 78aaa277cda4c2dd6997b82d4a458369ef199b9f239ca93e48acc7a2d0f8417ca0ef346fce70c0cb76512f34de04a76005597ccd2820cb8c9625b701ab2e5d51 WHIRLPOOL cac437b233463fbf754f1e2a2ea7770ae3d380c16d5e889fce0bdc4f0fe20217f6836c308c795485c69a90cf0149d701d988efc3617281f5c4803e41fb0d2b65
 DIST baloo-4.13.0.tar.xz 123552 SHA256 960e7b76eb6027f5517fd4da0e33fd80456a873fa459a0ea292b65c0c53f09cc SHA512 f09909a4ca961cf5ef6fc73bfe4b58433704086a6b6d4370069dae04d5b5f659f089efce64f7ab6d2d157bf36c5469f0bed3b5136f05fdbc7f3a1da638e3dbc0 WHIRLPOOL e6d2667d9d2c4966836c9b5ab145ab2d2e8c73a3ab3bb712ca7ee9d698c2b2f2d4f62b2f8ba7551ddfcbcdc4c6a5405842c98dd834e68270de258c38497ae343
-EBUILD baloo-4.13.0.ebuild 728 SHA256 1dbd6be83c6e91c58ed22bbe12f01929a36221df5ad606cfbcce02e5ded433d1 SHA512 d6d396d57805f2b3b055056220378d287cdbd7c2def9b36b3924f8ff04832a67cf35d3c86ea781daa9aa6ebb67fc73fa0c23d23d9f701fc4b8f78eafbf9b9bcc WHIRLPOOL f8877910f450d928dbc3c497eaca11c92212e330842070637ef1605f7ae0d815f6cb1b69efc158a09061be30ecd0ee9799e33e7dd500026a2dc475fe1150d2ce
-MISC ChangeLog 983 SHA256 7ce628b9dd16c2e689432b410fa9de6fcfd9533a24e8934bf3dcbbc5825f6391 SHA512 011ef6a4e8e5e978996ad5c0971f135fbf79cac9551128a0f873270fa4a6b58e53ad371926a861179772c7afc2c3b5f3664a1d8c50e4f21b41c0c0590c1de240 WHIRLPOOL 90f06dee1577edb313e74faebaab2ed2aa061d083ec657621a53e36b2a3fc7f78c16385b9282bd45cca07fd952c13deaed1b97801aff514389fb3ace8aa32e9e
+EBUILD baloo-4.13.0.ebuild 739 SHA256 c4f0b92e420645ec1bcf503f65026d796f96691126e2bc2e24dc2c4e55556307 SHA512 9949f6753546a2c59f4553c20ed65fc4a21c7f5d63efcc93308e8d8753017dbcbe322954a69b8937762acf00453311015de0160b7f02280be3a5b7f3adab76ee WHIRLPOOL 9653fd3cfea53dcafa35c2122d55642d0554cc5f3c2c059296bb10c62c6ae01f89e5db8ea703b88e4bb731f6a6589c70e0857600315daa18350a3c5215e39207
+MISC ChangeLog 1153 SHA256 ecfcaeafe0a4e155db2c960bef44b34952c728b2db38ffaaeaf516d230152081 SHA512 98133da1f9a4dfdbac80839d6824812e0f9e1a2b7826c9aa51741162d7c278b4732c6dcf44a766d738fedad56eea4ecb6bae8dbb0bdb40567140d4fe0d8b79b2 WHIRLPOOL 052502d5f94c9979ddeedb5e34eaf8feaf5edb178f94b239ad5f3942a5aaabb1d2a42ccf390d3614b297f2365642d435a78c165fec033bc9bdbdf14a5769e1f6
 MISC metadata.xml 323 SHA256 798c3fc9f0bf65815f44783f64452c52186f8cd22c5023f14932fc88de87ac03 SHA512 e63776a8969e9780eff4193f22dedecfbb91e949fecf18f27223a5d378ef0195897392f1f7b33c6745eabcbe7d71f6b2f6f7b43a6e68d0df88552b0ac77edf4d WHIRLPOOL d213069bd3e5f1a86ec986369162b588faa3ac8a56d8eb77e27b9ccc8b11859430d214e204405e9ca5f85fb9bda436fe7a4658a27809866581ea99409ba9fcc6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTZZUYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOc6NQP/213N3qKQAUyNL1ZUXYuXqMc
-dZ6uVX3kjUOCB/bEqVmsVRD2eAQgTEWWVmoXpvdps16OMbvmBHjrv16ifr9Iqgqd
-hBG9BXCb4s8QT32rWWEcVIv0IAr0mwksG4iAddxzTU9FeYFrpVUOEkAGLIiVR1JH
-oqbbT3yWPcMzl0n8diKEiN69d/iF+uNO0cCWJjBNEFqz61M1aJ8hOmdlsEVpK2JZ
-qZ45fG7XjwglbO1YzS+83DIhDeXI5xB5mQB4cO7iFv14KZA4IO0AXJTmDHYt0sXG
-fy88SDKxDUl08AGL3ctYp1SH3hQP8jx+hFb83JHlOTCjFJIInG3DuWSNOqIRCzKJ
-a0RTe4Mzo6hBy/rwd9MWgJ/n68WXCsdcfiH/Uhf3LuKN75Rcymx54FA3zSBbnD9y
-HRnNMfzlY+1rRIcGUV/K3uF2YLi8EsFOp+ABsEbPEqNDpx9CKjzjoQNXuitJ6AUB
-RJn/swBUG/oKjLS+A+AZT1qVBvphHptdiYULKcSgz5BKZSDToUhbmoPMBU7hsuZR
-xZJ08jesLl7vXVHtjlxN0v0Uvq+m7QbB1E8vmoIuuydFemD9jYL8LC/WHNUdUINn
-bvIDGQ8rupbldTJIo3mi8Gpg1IiRon1gr6qffk+MVwj8IIFk+Se78fT3mdtSHr5I
-eDaZNSLm3OF4yhXLtq1p
-=xo+f
+iQIcBAEBCAAGBQJTaF6YAAoJEC8ZTXQF1qEP1e4P/16uzu4eCwbXGqkocWCGiwwQ
+lIqfJ7caVGvLTDLoQt4u6wOpzHLGaG2wBg48e9D8bVyDWR5Uc8iUUjYEZrGJ4SGV
+TPQJPtRnuiV2YlUsFMg0Cxdy5bW/Vr2EUh9YXEy4lLdDK9eqW0peg4182SiWYgiL
+9h9gq3YhxDyDQ21BMnqR/IaxiR01kqmYpNtc7FdMjb3f9cI3CMwS9zwy8blshZGT
+hMN61fP2fKx6FRFsOrpjCBD+T6DOo9GOHokEPLZF09GM4dREazSP63hgEO6MiDDx
+JIaH19rEmF6+KzaOHB72RymNHMIbRxLS76MnKHTGVVO45BXll7aFleoOkaz8msOu
+3mDNBoPoNCBc7Yg+ybUe5OFbvhRHiXSZU4Z8dwvU0Ntxe/p4Q6UMXC4wdx0LssJI
+KWMDN2BCvQxxKqJ6kNCVVGpjRxRK7yACWckSei9PdSmdHwDg5Bp7Htd0DTAKGSUS
+la4dw6jovdY1DIJqh4W13dxL0F2iaYJ2jZeKxWtXT1Z0KHQYXlGlNWnW2xvQ0Kvs
+m2DyfFzgZtdlYlf5Zpn+sA0IOFxhBdB8yGRtU/g6HA4KoPhrUNM+HrZ32tEuuMuL
+ZQBNNnYmAL+hVfWOMZG1mtvECenN34XAk6Ekw8QEBTFLy+RpF5tXOJvKn52nMleM
+13COdtyxsq+lfdaeS1sM
+=etv7
 -----END PGP SIGNATURE-----
