@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/baloo/baloo-4.13.0.ebuild,v 1.6 2014/05/04 01:17:05 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/baloo/baloo-4.13.0.ebuild,v 1.7 2014/05/06 04:03:26 jmbsvicetto Exp $
 
 EAPI=5
 
@@ -20,8 +20,8 @@ DEPEND="
 "
 RDEPEND="
 	${DEPEND}
-	alternatekcm? ( kde-misc/baloo-kcmadv )
 "
+PDEPEND="alternatekcm? ( kde-misc/baloo-kcmadv )"
 
 RESTRICT="test"
 
