@@ -2,25 +2,23 @@
 Hash: SHA256
 
 DIST baloo-kcmadv-2014.04.27.tar.xz 16208 SHA256 47d3ade8fdcbe67fcc7aac25c058eec63fe790636a69026bddc506170ca94b31 SHA512 859734dda6a315e4e8da303b99bd78e45e9f0ba72675fa0bddbc5fe80dccceefc53cb0731e8be4ca5248c16a43ec959fcb559f04c05fa4673d75340bea6c349f WHIRLPOOL 545777b3c34ade0f032791c8fe605116e501238528e2a748cd7293eb8cd134a6988229ba13078f05945933143e9d820f3c46aa01b5a78baa69e0110a4503f6d0
-EBUILD baloo-kcmadv-2014.04.27.ebuild 677 SHA256 816237af874c9f2d436cc281fca71bb3a7a0e2f1f6a183b2553a3851934b1ea4 SHA512 c3f7f1f53efc06b8c1e0b81ad8f12acbe5cdd7318d7ea7cb2bc3a0b4909a3a067593e11c42d3ee6608fbbb0ffce0f5131712cc029fed1072c7c75c9786509754 WHIRLPOOL d805b8d8a817e1d7a28856fc4e34e24faf791ebffb2ada482e0a03f194a8d6017e30132fb88c5ab2572ad84e3ed982ee617d7de970d1bcfdf15ea94fbc79e130
-MISC ChangeLog 380 SHA256 0e42aa0ca1bef0571436c35cf38a74cc46b2a98a6e727763bfa72de9138efb4e SHA512 526a5b83d49cdcf0a3419278f5bc4964d3d16c38ff3c1ee915cb07abc8f50189ba00fdc008dce4f3b0d9f6607c9c143412f5bbbea05d7835e5b07631694de865 WHIRLPOOL 7655ec253e446df9c7a2ff6ba043940d8ad2c3f8bda4b202a8f167e8d333222921cb31788c98085eead58e2d3f715addde3a10bd55fae438f7514330c161d52f
+EBUILD baloo-kcmadv-2014.04.27.ebuild 705 SHA256 839fdbb5a2f9d7a878f71e04af26608de603d30f35a4b03b2ddad0d5b2ad0f01 SHA512 8a0ad9eff44e32cba65894f27efd910c7c05b39a6f5763d5ae7aa320aaf44f379fccaa3bf427d4ae406009359363448487bfef201b32c8c7bc7addef1f5e8b9f WHIRLPOOL a6a4865535c38c7a74fa047912fe4e4d96440aa6c84969d0d5c19fa0e54b3ad8382e66c6d41b733d0304a89194a979eb2419c5e0e8d96f81af2ec03031de5613
+MISC ChangeLog 517 SHA256 4bec6d158f8c75991daf1befe9eb8dfcf4ab9bb0005850b05efa5eee43099ab3 SHA512 364928bac44dba770ba2a6321910a36dc1f1cc1091026dbd758d3c362520d9394c46f40814c55e61ab6e34fcab190329abe1bc94b53fdd2c4f77a05f7403afa7 WHIRLPOOL 2da11fd846d7d331920a8703333c1c21b364c423af7f8cd7599eea40902e196c22198aec0d33783e051e33504bb16b711fa79be61d66725a1818de74887a9861
 MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTY7smXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOc7+IQAIFgUA/INuTd21VXy2tENrLM
-CDiC6pooQ+fREaXjfssWXEsv8sNYK79o/WtH3cPpz+gNEW93EYs6TushmndxUI3f
-sP9ykdwRWnlaE9Z6ldo+5uWDzxFAPVZBknHNeWTRP/U7gaOFaHfHyztLwx53WYdq
-m5PtsTR/nJy+TMXc4M6hNec6kFexWOg1H10nd9yS0qLMIF73LsnqGeulov+9yTNw
-3GelbVbfvQEruqBlYAjQDJr7tYgqWQiawc3tV73lyNpcMPMqj1VxhY8dBDfql8tF
-VE4J+8skdFd3Nf3UoBqRBB/Fddax2QHXSzseASxzvEB5oNvS76nBp5ilFD+G8siq
-bDa/vgwNXivgrSxNHXIhTPpjpwvZfEqFU7LUItal29xO3r4vg9xEpkTptsYff0Xh
-di6Rqhn0Q4QYZCHOo7zMGLuZCx1/t88qzsmmiIvpLXUxHaoxzkEd7kvxs5Sq/l5W
-cWhUN6ny9yJck8TgjmiF1aOe9WhrcBoPMj9TJ9GiHKCyFIxPDYUHDNLPSYljKA5o
-wO1sFPsgCW2AR3ZxRJjqXlsByOCIPRrwQoRQHOVTJ2mm8OdxjMJ7BHedFqozJydP
-C9hx85dernDuCDJ1XN+sYw4KuFRoexD4OXyt/+RoGnN0cAqGvpYz0WvV59iZuk43
-cuWysTqmzWjzz7Yl0Jb1
-=x3iO
+iQIcBAEBCAAGBQJTaF4nAAoJEC8ZTXQF1qEPX/IP/AzionKsMiFTAmatvmmnDNdP
+q7B92UW79VFH7DVUBoSSt8l2SB290VrL501mqrmLSeOarqxT2uZ4lHEEQAll6fcz
+BMHM4UxTLl6sL4fWcXSh0UIc6TddMUBSYMyBf/elm+jKRuumc2uPceZvuBqsYkBO
+fz9tcoUk0xRada/S8HKvtPaLM9y7fzE2gTdaXUbsKcXeIK3BNrRFsEWUJOEixb+W
+2YHDINS+CfYLT7mo0EwWtLE2uwK+iAGo6Bg5VZPi1wWWP4CoUqoZjiHUGlYd2JJK
+zTfIDE0Pi9qPyM04xKMZy1qYUaT6dtjwjkhxZ906/C9pd3/zfEWkDU8BypMgHurV
+ZWxykgFz1K2IXvgjC4dbzBVIPMJbAvTpblwXPk2B8BGpfBxuVARs3WUmJZ/SlSeF
+oiXHq2Y+8pW9NOU88Uaq5mkc27u2rs+zqrqzB3P7KGFOFRs72YzrfKz3QWCk17c/
+YTiQI3VDO18LHmXqM8tgzbpuAtp6ybp7GMbKVs+KWWWrxzSL0MGVYsSR4GFUeUNp
+JWuZx9DwNhjjiKRemPv0tEPG7zlNwzO5bdXIzvcne2j1eSougvz/Eo4gTg+/bvJU
+xulSoZ96Ar1l804426sHjaDGILERMFFfjgUOAOx+VVUs+GjBompQgNpOdxkS+9My
+piS2WheM6Fht47c+7CTE
+=Qt8K
 -----END PGP SIGNATURE-----
