@@ -6,9 +6,10 @@ HOMEPAGE=http://www.kde.org/
 IUSE=debug +alternatekcm aqua
 KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=>=kde-base/kdepimlibs-4.13.0:4[aqua=] >=kde-base/kfilemetadata-4.13.0:4[aqua=] dev-libs/qjson =dev-libs/xapian-1.2*[chert] sys-apps/attr !<kde-base/nepomuk-4.12.50 alternatekcm? ( kde-misc/baloo-kcmadv ) >=kde-base/oxygen-icons-4.13.0:4[aqua=] dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.13.0:4[aqua=]
+PDEPEND=alternatekcm? ( kde-misc/baloo-kcmadv )
+RDEPEND=>=kde-base/kdepimlibs-4.13.0:4[aqua=] >=kde-base/kfilemetadata-4.13.0:4[aqua=] dev-libs/qjson =dev-libs/xapian-1.2*[chert] sys-apps/attr !<kde-base/nepomuk-4.12.50 >=kde-base/oxygen-icons-4.13.0:4[aqua=] dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.13.0:4[aqua=]
 RESTRICT=test
 SLOT=4/4.13
 SRC_URI=mirror://kde/stable/4.13.0/src/baloo-4.13.0.tar.xz
 _eclasses_=cmake-utils	7798d4361fbdd043014e635a1753e076	eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	4f85356160aa721ee3f4be09609def19	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=11f23abd79de069b12eaaca8ef10a13c
+_md5_=a37e6a1c544ca5da539bd515e8833c37
