@@ -1,4 +1,4 @@
-DEFINED_PHASES=config configure install preinst prepare setup
+DEFINED_PHASES=compile config configure install preinst prepare setup
 DEPEND=!net-dialup/cistronradius !net-dialup/gnuradius sys-devel/libtool dev-lang/perl sys-libs/gdbm python? ( || ( >=dev-lang/python-2.7.5-r2:2.7 ) ) readline? ( sys-libs/readline ) pcap? ( net-libs/libpcap ) mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) firebird? ( dev-db/firebird ) pam? ( virtual/pam ) ssl? ( dev-libs/openssl ) ldap? ( net-nds/openldap ) kerberos? ( virtual/krb5 ) sqlite? ( dev-db/sqlite:3 ) odbc? ( dev-db/unixODBC ) iodbc? ( dev-db/libiodbc ) oracle? ( dev-db/oracle-instantclient-basic ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
 DESCRIPTION=Highly configurable free RADIUS server
 EAPI=5
@@ -11,4 +11,4 @@ REQUIRED_USE=bindist? ( !firebird )
 SLOT=0
 SRC_URI=ftp://ftp.freeradius.org/pub/radius/freeradius-server-2.2.5.tar.gz ftp://ftp.freeradius.org/pub/radius/old/freeradius-server-2.2.5.tar.gz http://dev.gentoo.org/~flameeyes/freeradius/freeradius-2.2.0-patches-4.tar.xz
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	python-any-r1	4560effd96d3d2a82e50af7cf87166da	python-utils-r1	52284f64cfc64a6d70bc00a9f5a01c6f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=4429c2152a935f4374f354d8f20381b0
+_md5_=f1ae7b72a0cc7a7ce7d338e3f30b78e7
