@@ -9,15 +9,15 @@ DIST freeradius-server-2.2.0.tar.gz 4289865 SHA256 ac22eefe7bd7c1c2b4de28613e628
 DIST freeradius-server-2.2.5.tar.gz 4415950 SHA256 8c4c2a0b600a8d85d2235589a5e80d4fefd1f52317e9daf8193731566fa9d012 SHA512 511599b4f4f5906441d0cda61946341f2226b9aae69b6f68b03a19898b6385499a8221933c191232d50f736cab93f0f6f271e4defe4552e7738cb21e2415f053 WHIRLPOOL 629ac42749b736a7cd606c97fb149ea6f3b11d0e77bc5fc69785e4c7956f073131eb16420f276de5664e977a37a6784d0bbff08a15c1c23389f5369320a4cb12
 DIST freeradius-server-3.0.2.tar.gz 4233972 SHA256 687f6ca9870709bd433c044947225e365f5099499abba51419bf77134223713b SHA512 8d1168081929cd296e79a31fb3940535643c69c2f2012197e7730bf0886893bfdd49fce9b8c9495ecf6709f67a42b0bfe70c47bfda2e1519aa6baabc30dbfe30 WHIRLPOOL 7e8b326051356e9878db8e5599f5c7806e9c62d9c572ea9f3d07e1a6f359caf96d9d229f05b9b847f4fbb2a51567b30f5e1fe612eff9eaab966042d7fb372b00
 EBUILD freeradius-2.2.0.ebuild 5116 SHA256 d824195666cdf9b96e164cac85c323346ee975a4546f2dcaca6d350630adf00a SHA512 2ccebbf419d568523a9fac00e8b8187a1aa873802ffdb0c92d755a39bb3b94b5e4009f9167a1dca311743c15418ad5fed362375f0229e3f0501a639ce32aeac3 WHIRLPOOL 72f73106896f87d0756fb327d34b81aebcf74e3aef0e86242c6c5fa99b22a01779b72cc4a5b74d5bd50b4edd20cc1b479325819edb62dc50775e937b9b3f2fc4
-EBUILD freeradius-2.2.5.ebuild 5067 SHA256 055fca22ccb65b9118082f8c899aa7e39e592cd4834fd378e62311896d907212 SHA512 73b1fc93078ae144742032b6fd7cb071e8d545772b529dfa281dba517a3a9bfac2a0b5b90a7a41cd6973a6544f47997ae1c2eefdeb969edd5ed41efe710e4ff5 WHIRLPOOL fd65c81cdd1e361c8bdd96026f1cf2fc797f84763a1912eb3b643c135175a1c868a2e110d343ade7449dbbee1f629729ee03e8b1456fa242fd0baebcd4e3e53b
+EBUILD freeradius-2.2.5.ebuild 5125 SHA256 7f00a226b93f87617583bfaa52f52702443f8c99005ee85f71c3fda284a71421 SHA512 49b4befb266afdc33422dc13c392502f13848772f3ae4a3cfc11bced564ff2aada5839fcab942f5d4fb1de2cc0e75391e2b38d67497017e6d773a45cc83d1092 WHIRLPOOL 03ed3c0900a709576d817dd980421112e033bf57226c48908544194b79b5a4b1bef8919b862f0a7a3b25cb695392da471270bea546afe25132b6e0c75938e15e
 EBUILD freeradius-3.0.2-r1.ebuild 5517 SHA256 48ee8db2949273cb4c5db82c2159a1863c969fcb965267a0cd0defbd3cee8d59 SHA512 5507489651602f86476b925c81b6eaa472caa4a3f8ec1b797215cf2fa4344ab21a80bec6807bc0bf56ab810164fbd9bbdc1c2bca7313e5a2bc60c41d5db412ea WHIRLPOOL b5a36aec2ed8878d45043b8669dbddf0df6d8e5f874bedc8eb2d643e443c43f1cd17000fa4238a9b60bdfd55b8b6e6b798697f3d1f043af7c0eedfd358d7e676
 EBUILD freeradius-3.0.2.ebuild 4983 SHA256 e541623a1773112e203547a1c88c88b984c15f0bdefcc6628454f18fe3aab638 SHA512 365b4213e6285db114007e6af9d5463f182b318a7ec19af0647a1cd9bc948b3947eb97a8a408f53e8b1978c5d099374bc3812f77b0533b47e366f18142ef5d30 WHIRLPOOL f130a305fe0a52a5a5cbb1977a164f32517e8b5131467f11092ee765bc592cbbd5a4521f8c6b5ca54cc8c12a1832ced1a344ea00391b9b9d1422ee094f10a86d
-MISC ChangeLog 26941 SHA256 3d224ae0ff12b579c7bf8e038c62963dd8abe5c06efb4f72b3dd6f11ed846f67 SHA512 8b7592b74b350aa259bd7178b46c50c4d2014b7179c6b39888baaa09dccfb22f626defabd175e48cd139808288882e1f27f5461b3dae881e5eeca1f2c4dadfc6 WHIRLPOOL e976220a8b378f0c0f63de0016ad517c76b43de6af8e4647b843966a705a1066d3b08be14b8f2c6b9d6a838c58c79ca172bfe52a0f002a1a7c92f3641049d1fa
+MISC ChangeLog 27104 SHA256 384095a945ff3984e0729a8f97f2d06d29c582a5cdb84b2c8f6cd334c9ba1d7f SHA512 69716dda7afa5330bf663dfe43f6ffb17284bfd17244225f5096e1bc59b2f2a5c9890fe8ab23ff89e0f8f11d1d93dfc182cc7581f26d2c7c2df10f0edc29fe1e WHIRLPOOL 816b4201fbb0f2f11eacf6eaad1a7a21c505a3914abe3731d4b1d6da57f822effe09c12d6f329b25c6b0bfdd879259c76ae12962a77f27a790d3e7c054024b2e
 MISC metadata.xml 435 SHA256 17d441afcfa0aac8ea4317f50436a55adad6b51dd407613df8e6a7341fc348a6 SHA512 17d166ec4154f6d9a85cfc7135f3b14641d0357d959b76af27067cf069f392f9fe7bbf44683f84a963552e0dd88c668f3c9c4f3a4e00ee98ab56de291d292b0a WHIRLPOOL 69f278ec8875ed0085e86db9373a04285c2452448f1220ed1c8c31e9f0283b8b80c720b108373ba9a0478a0118034faec7b91ab7f5d93adbff2bfca79b5460f1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNm0uAACgkQVWmRsqeSphPC6wCfe6wq/A1bLsnV0aEntSod1P+D
-6scAnRmboR8gt9nGyPABCgVQ3Pd/H6uy
-=tT9U
+iEYEAREIAAYFAlNoYTMACgkQVWmRsqeSphPTwQCfawO3fUJVYPaVHEayrSdhaZzx
+i7YAnjbeUzjlyPsGJVWDG9EnGyPrj4Ag
+=ucT1
 -----END PGP SIGNATURE-----
