@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/baloo
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/baloo/ChangeLog,v 1.6 2014/05/04 01:17:05 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/baloo/ChangeLog,v 1.7 2014/05/06 04:03:26 jmbsvicetto Exp $
+
+  06 May 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  baloo-4.13.0.ebuild:
+  Make the dep on kde-misc/baloo-kcmadv a PDEPEND to break the circular dep.
 
   04 May 2014; Andreas K. Huettel <dilfridge@gentoo.org> baloo-4.13.0.ebuild,
   +files/baloo-4.13.0-nokcm.patch, metadata.xml:
